# brixy

./: LICENSE  README.md  changelog.md  pyproject.toml  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
src/brixy/: __init__.py  brixy.py  logging.py
tests/: __init__.py  docker-compose.yml  hello_world.py  test_brixy.py
